objects/FLODocs__Environment_Compare_Single_Wrapper__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__objectApiName__c</fullName>
        <label>objectApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__objectId__c</fullName>
        <label>objectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__objectIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>objectIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__objectLastModifiedDate__c</fullName>
        <label>objectLastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__objectLastUsedDate__c</fullName>
        <label>objectLastUsedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__objectName__c</fullName>
        <label>objectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__objectType__c</fullName>
        <label>objectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__xml__c</fullName>
        <label>xml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Environment Compare Single Wrapper</label>
    <nameField>
        <label>Environment Compare Single Wrapper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Compare Single Wrapper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>